# CppAnimations

TestAnimations/: CMakeLists.txt
TestAnimations/src/: main.cpp
